--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,13 @@ pandas
 sentence-transformers
 torch
 scikit-learn
+nltk
+python-docx
+PyPDF2
+python-multipart
+fastapi
+uvicorn
+python-dotenv
+openai
+transformers
+numpy
